--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
+    compile 'com.android.support:design:22.2.0'
     compile 'com.rengwuxian.materialedittext:library:2.1.4'
     compile 'com.parse.bolts:bolts-android:1.+'
     compile fileTree(dir: 'libs', include: 'Parse-*.jar')
